--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
   "name": "koishi-plugin-sleep-obediently",
   "description": "写给星星的宵禁",
-  "version": "0.0.1",
+  "version": "0.0.3",
+  "contributors": [
+    "LectWolf <2242299685@qq.com>"
+  ],
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
     "lib",
     "dist"
   ],
-  "license": "MIT",
+  "license": "GPL-3.0-only",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LectWolf/koishi-plugin-sleep-obediently.git"
+  },
   "scripts": {},
   "keywords": [
     "chatbot",
     "koishi",
     "plugin"
   ],
+  "koishi": {
+    "description": {
+      "zh": "写给星星的宵禁"
+    },
+    "hidden": true
+  },
   "devDependencies": {},
   "peerDependencies": {
-    "koishi": "^4.18.0"
+    "koishi": "^4.17.4"
   }
 }
